# bilibili-summary

./: .gitignore  LICENSE  README.md  config.example.yaml  implementation_plan.md.resolved  latest.md  most.md  pyproject.toml
bili_summary/: asr.py  bilibili.py  cli.py  config.py  downloader.py  output.py  summarizer.py  utils.py
docs/plans/: 2026-03-08-bilibili-summary-design.md  2026-03-08-bilibili-summary-implementation.md
tests/: test_asr.py  test_bilibili.py  test_config.py  test_downloader.py  test_integration.py  test_output.py  test_summarizer.py  test_utils.py
