# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bili-summary"
version = "0.1.0"
description = "Bilibili video subtitle extraction and summarization tool"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "yt-dlp>=2023.0",
]

[project.scripts]
bili-summary = "bili_summary.cli:main"
